Fixing issue with spacing

--- a/app/src/pages/Home/index.module.css
+++ b/app/src/pages/Home/index.module.css
@@ -2,7 +2,7 @@
   margin-top: 6rem;
   background-image: url(../../assets/food.webp);
   background-size: cover;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
